--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:9.8.0'
     compile 'com.google.android.gms:play-services-auth:9.8.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
     testCompile 'junit:junit:4.12'
 }
 
