--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:9.8.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+    compile 'me.dm7.barcodescanner:zxing:1.8.4'
+
+    compile 'com.github.kenglxn.QRGen:android:2.2.0'
     testCompile 'junit:junit:4.12'
 }
 
