--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "24.0.2"
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.android.shopr"
         minSdkVersion 16
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:9.8.0'
     compile 'com.google.android.gms:play-services-auth:9.8.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.android.support:design:25.0.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
     compile 'me.dm7.barcodescanner:zxing:1.8.4'
 
