--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,10 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:9.8.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.android.support:design:25.0.1'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.4'
     compile 'me.dm7.barcodescanner:zxing:1.8.4'
-
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.github.kenglxn.QRGen:android:2.2.0'
     testCompile 'junit:junit:4.12'
 }
