--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,16 +20,17 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCwtTqB8QoUE90RIxXjWzyh_aT8XHKdp24"/>
-        <activity android:name=".HomeActivity"/>
-        <activity android:name=".OnBoardActivity">
+        <activity android:name=".HomeActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".OnBoardActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".StoresDetailActivity"/>
-        <activity android:name=".CartActivity"/>
-        <activity android:name=".ProductDetailActivity"/>
+        <activity android:name=".StoresDetailActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".CartActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ProductDetailActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
