--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".CartActivity" android:screenOrientation="portrait"/>
         <activity android:name=".ProductDetailActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".PlacesActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
