--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
     compile 'com.google.maps.android:android-maps-utils:0.4+'
+    compile 'com.appyvet:materialrangebar:1.3'
     testCompile 'junit:junit:4.12'
 }
 
